[package]
name = "not-found-error"
version = "0.1.6"
edition = "2021"
description = "Convert Option to Result using convenient functions"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/not-found-error"
repository = "https://github.com/DenisGorbachev/not-found-error"
readme = "README.md"
keywords = ["tools", "option", "result"]
categories = ["rust-patterns", "development-tools"]


[package.metadata.details]
title = "Convert Option to Result"
tagline = ""
summary = ""
announcement = ""

[dependencies]
